# PythonWrangler

./: .gitignore  Affirms.py  Idea.md  LICENSE  LICENSE-MIT  README.md  __init__.py  design_internals.md  pyproject.toml  showcase.py  test.py
Code/: Logging.py  TestLib.py  Tests.py
Idea/: GPT.py  Idea.md  Test.txt
OLD/: Affirms.py
OLD/Tests/: Class.py  Function.py  __init__.py
TestCode/: Logging.py  TestLib.py
Tests/: Class.py  Function.py
V1/: AffirmError.py  TestDecorators.py
V1/Tests/: Class.py
ideas/: Goals.md  idea_testing.py
src/: __init__.py  _affirm_statements.py  _test_decorator.py  testing.py
src/PythonWrangler/: _affirm_statements.py  _test_decorator.py
src/PythonWrangler/__internals/: affirm_error.py
src/PythonWrangler/src/: affirm_error.py  affirms.py  raising_errors.py  test_decorator.py
src/__internals/: __init__.py
src/__internals/testable_types/: testable_class.py  testable_function.py  (+3 more)
src/internal/: __init__.py  testable_settings.py
src/internals/: __init__.py
src/python_wrangler/: __init__.py  _affirm_error.py  _affirms.py  _test_class.py  _test_decorator.py  _test_functions.py  affirms.py  test_decorator.py
tests/: _affirms_tests.py  _test_decorator_tests.py  showcase.py  test_affirms.py  test_class.py  test_decorator.py  test_functions_tests.py  testing_for_decorator.py
tests/decorator_tests/: _test_decorator_tests.py  testing_one.py
tests/decorator_tests_found/: _double_wrap.py  _pseudo_decor.py  _with_without_brackets.py
tests/test_types_tests/: _test_function_tests.py  _test_method_tests.py
(+14 files in other folders)
