[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_wrangler"
version = "0.0.1"
authors = [
  { name="Example Author", email="joknavi1@gmail.com" },
]
description = "A simplified unit testing library for python."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JokNavi/PythonWrangler"
"Bug Tracker" = "https://github.com/JokNavi/PythonWrangler/issues"