[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PythonWrangler"
version = "1.5.2"
dependencies = []
authors = [
  { name="Wannes Vantorre", email="VantorreWannes@gmail.com" },
]
description = "A down to earth easy to use python testing unit library."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Education :: Testing",
    "Programming Language :: Python :: 3.6",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/VantorreWannes/PythonWrangler"
Issues = "https://github.com/VantorreWannes/PythonWrangler/issues"